--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   }
