--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^5.11.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
+    "markdown-it": "^14.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   }
