--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
     "clsx": "^2.1.1",
+    "developer-icons": "^6.0.2",
     "lucide-react": "^0.525.0",
     "markdown-it": "^14.1.0",
     "tailwind-merge": "^3.3.1",
